  - Fix $0 plot taxes being paid by residents.
  - Fix for a "null" feedback message when using /t outlaw add NAME.
  - Fix EventWar not turning PVP on in the townblocks where the war is active.
  - New Feature: Town Merging, courtesy of Warriorrrr with PR #4755.
    - Closes #3193.
  - New Command: /t merge town
    - town is the town which will be merged into the town owned by the mayor using the command.
  	- Comes with potential economic costs (related to base merging costs, as well as townblock costs.)
  - New Permission node: towny.command.town.merge.
    - Child node of towny.command.town.*
  - New Config Option: town.max_distance_for_merge
    - Default: 10
    - The maximum distance (in townblocks) that 2 town's homeblocks can be to be eligible for merging.
  - New Config Option: economy.new_expand.price_town_merge
    - Default: 0
    - The base cost a town has to pay to merge with another town. The town that initiates the merge pays the cost.
  - New Config Option: economy.new_expand.price_town_merge_per_plot_percentage
    - Default: 50
    - The percentage that a town has to pay per plot to merge with another town. The town that initiates the merge pays the cost.
    - This is based on the price_claim_townblock.
  - Bump language files to 0.100.
  - Fix TownPreMergeEvent being set improperly.
  - Fix NPE when deleting a Town.
0.96.7.7:
  - Fix "Error Updating item_use/build/destroy permission" messages seen in EventWar.
    - Closes #4802.
  - Do a tidy of the PlayerCacheUtil so we aren't throwing and catching NREs.
  - Regression: Remove "spawn" from the list of black-listed Town/Nation names, added to the list recently in error.
  - Fix unbankrupting a town resetting a town's bank account, vanishing any money that might have been added to the town bank manually during bankruptcy.
0.96.7.8:
  - /ta nation NATIONNAME add TOWNNAME now bypasses the invite and other rules allowing an admin to force-add a town to a nation. 