@@ -788,16 +788,18 @@ public class TownyPlayerListener implements Listener {
 		
 		if (outlaw == null)
 			return;
+
+		boolean hasBypassNode = TownyUniverse.getInstance().getPermissionSource().testPermission(outlaw.getPlayer(), PermissionNodes.TOWNY_ADMIN_OUTLAW_TELEPORT_BYPASS.getNode());
 		
 		Town town = event.getEnteredtown();
 		
 		if (town.hasOutlaw(outlaw)) {
 			// Admins are omitted so towns won't be informed an admin might be spying on them.
-			if (TownySettings.doTownsGetWarnedOnOutlaw() && !TownyUniverse.getInstance().getPermissionSource().isTownyAdmin(event.getPlayer())) {
+			if (TownySettings.doTownsGetWarnedOnOutlaw() && !hasBypassNode) {
 				TownyMessaging.sendPrefixedTownMessage(town, Translation.of("msg_outlaw_town_notify", outlaw.getFormattedName()));
 			}
 			// If outlaws can enter towns OR the outlaw has towny.admin.outlaw.teleport_bypass perm, player is warned but not teleported.
-			if (TownySettings.canOutlawsEnterTowns() || TownyUniverse.getInstance().getPermissionSource().testPermission(outlaw.getPlayer(), PermissionNodes.TOWNY_ADMIN_OUTLAW_TELEPORT_BYPASS.getNode())) {
+			if (TownySettings.canOutlawsEnterTowns() || hasBypassNode) {
 				TownyMessaging.sendMsg(outlaw, Translation.of("msg_you_are_an_outlaw_in_this_town", town));
 			} else {
 				if (TownySettings.getOutlawTeleportWarmup() > 0) {
