@@ -5904,3 +5904,5 @@ v0.92.0.11:
   - Fix unbankrupting a town resetting a town's bank account, vanishing any money that might have been added to the town bank manually during bankruptcy.
 0.96.7.8:
   - /ta nation NATIONNAME add TOWNNAME now bypasses the invite and other rules allowing an admin to force-add a town to a nation. 
+  - Change it so that admins with the bypass node will not warn towns that an outlawed admin is spying on them.
+    - Previously only full admins were preventing warns.
